<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_app"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/lbl_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:text="@string/lbl_userName"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:textSize="14sp"
        tools:ignore="SmallSp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_birthdate"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/user_dateBorn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:textSize="14sp"
        tools:ignore="SmallSp"
        android:hint="@string/lbl_dateForm"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_gender"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sex_masc"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/lbl_mas"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/sex_fem"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/lbl_fem"
            android:textSize="13sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_phoneNumber"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/user_phoneNumber"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:textSize="14sp"
        tools:ignore="SmallSp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/lbl_email"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/user_email"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:textSize="14sp"
        tools:ignore="SmallSp"
        android:hint="@string/lbl_emailexample"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/user_password"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        tools:ignore="SmallSp"
        android:layout_width="330dp"
        android:layout_marginStart="35dp"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_confirmPassword"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/user_confirmPassword"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        tools:ignore="SmallSp"
        android:layout_marginStart="35dp"
        android:layout_width="330dp"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnclean_fields"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_clean"
            android:backgroundTint="@color/aqua"/>

        <Button
            android:id="@+id/btnsave_information"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:backgroundTint="@color/blue"/>

    </LinearLayout>
</LinearLayout>